RET-5205: CR Suggestions